--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "medusa-next",
-  "version": "1.0.3",
+  "name": "groccia-storefront",
+  "version": "0.1.0",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
-  "description": "Next.js Starter to be used with Medusa server",
+  "author": "Nguyen Pham",
+  "description": "",
   "keywords": [
-    "medusa-storefront"
+    "groccia-storefront"
   ],
   "scripts": {
     "dev": "next dev -p 8000",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^2.1.1",
     "@hookform/error-message": "^2.0.0",
     "@medusajs/link-modules": "^0.2.3",
     "@medusajs/medusa-js": "^6.1.4",
@@ -34,6 +35,7 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
+    "embla-carousel-react": "^8.0.0-rc20",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
@@ -58,6 +60,7 @@
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "cypress": "^9.5.2",
+    "daisyui": "^4.6.0",
     "eslint": "8.10.0",
     "eslint-config-next": "^13.4.5",
     "postcss": "^8.4.8",
