ci: New rules for eslint with prettier integration

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "arrowParens": "always",
-  "semi": false,
+  "semi": true,
   "endOfLine": "auto",
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
