--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "next start -p 8000",
     "lint": "next lint",
     "cypress": "cypress open",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "postinstall": "husky"
   },
   "resolutions": {
     "webpack": "^5",
@@ -59,12 +60,16 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "cypress": "^9.5.2",
     "daisyui": "^4.6.0",
     "eslint": "8.10.0",
     "eslint-config-next": "^13.4.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
