--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
     "embla-carousel-react": "^8.0.0-rc20",
+    "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.0",
@@ -46,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-radix": "^2.8.0",
     "theme-change": "^2.5.0",
     "webpack": "^5"
