chore: Change repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "groccia-storefront",
+  "name": "@groccia/storefront",
   "version": "0.1.0",
   "private": true,
   "author": "Nguyen Pham",
