--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.0-rc20",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.373.0",
     "medusa-react": "^9.0.0",
     "negotiator": "^0.6.3",
     "next": "^14.0.0",
@@ -49,7 +52,8 @@
     "react-dom": "^18.2.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
     "theme-change": "^2.5.0",
     "webpack": "^5"
