feat: dialog and dropdown menu from shadcn and radix ui

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "resolutions": {
     "webpack": "^5",
-    "@types/react": "17.0.40"
+    "@types/react": "^18.2.42"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
@@ -34,6 +34,9 @@
     "@meilisearch/instant-meilisearch": "^0.7.1",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
